applications/repo-download-cn-north4/deployment.yaml
# Deployment for repo service
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: repo-server
spec:
  template:
    metadata:
      labels:
        app: repo-nginx-pod
    spec:
      containers:
        - name: repo-nginx
          volumeMounts:
            - mountPath: /repo/mindspore
              name: data-volume
            - mountPath: /etc/rsyncd.secrets.ro
              name: rsync-secrets-volume
              subPath: rsyncd_secrets
          resources:
            requests:
              cpu: 4000m
              memory: 6000Mi
          command:
            - /bin/sh
            - -c
            - |
              mkdir -p /repo/mindspore
              exec nginx -g "daemon off;"
        - name: rsync-server
          volumeMounts:
            - mountPath: /etc/rsyncd.conf
              name: repo-nginx-configmap-volume
              subPath: rsyncd.conf
            - mountPath: /etc/rsyncd.secrets.ro
              name: rsync-secrets-volume
              subPath: rsyncd_secrets
            - mountPath: /repo/mindspore
              name: data-volume
            - mountPath: /root/.ssh/authorized_keys.ro
              name: repo-nginx-configmap-volume
              subPath: ssh.pub
            - name: rsync-secrets-volume
              mountPath: /etc/nginx/conf/basic_auth_files
              subPath: download_auth_secrets
          resources:
            requests:
              cpu: 2000m
              memory: 6000Mi
      volumes:
        - name: rsync-secrets-volume
          secret:
            secretName: rsync-secrets
        - name: data-volume
          persistentVolumeClaim:
            claimName: mindspore-data-volume
