applications/repo-download-cn-north4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: repo-service
spec:
  type: NodePort
  ports:
    - name: rsync-ssh-server-port
      nodePort: 30022
      port: 22
      targetPort: 22
